           a programmer error and shouldn't probably be handled by Net::XMPP2
           I added it for convenience. Hopefully noone is confused.
         - fixed potential bug in ping extension
         - added a sample bot samples/talkbot
         - fixed small issue in Writer.pm
         - added other sample bot samples/talkbot_channel

0.07 Tue Aug 14 19:22:11 CEST 2007
         - implemented whitespace ping and:
            - XEP-0199 - XMPP Ping
         - added next_iq_id() method to Net::XMPP2::Connection
         - additions to Net::XMPP2::Event, you can now implement guards
           for unregistration of registered event callbacks. You can also
           remove all callbacks now and event names are case sensitive now.
         - Net::XMPP2::Client adding already existing accounts
           now updates them.
         - further todo items killed for MUC support
         - implemented mapping of old error codes to the new condition strings
           and the other way around too in Net::XMPP2::Error::Stanza
         - fallback namespace function for simxml() is now enabled all the time,
           now default namespaces are nearly always generated an the namespace of a
           node fallsback to the parent node if none was supplied.
         - increased test timeout to 20 secs and offered an environment variable
           to override it.
         - the XML writer doesn't write a encoding declaration anymore, for the sake
           of XMPP.

0.06 Wed Aug  1 15:53:56 CEST 2007
         - reply_iq_result and reply_iq_error now attach a from attribute themselves.
         - added general instructions for the test suite which also seems to be
           useful to test servers :-)
         - implemented XEP-0092
         - reviewed the message API a bit, take care
         - started implementation of MUC (XEP-0045).
         - added support for:
            - XEP-0082 - XMPP Date and Time Profiles
            - XEP-0091 - Delayed Delivery (legacy)